fixing the log alignment trying 1

--- a/style.css
+++ b/style.css
@@ -344,7 +344,7 @@ footer {
 
 .logo-img {
   height: 100px;
-  width: 200px;
+  width: 50px;
   object-fit: contain;
   border-radius: 6px;
 }
